--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                       </div>
                     </address>
-                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="#0" role="button">Télécharger CV</a>
+                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="./Black White Minimalist CV Resume.pdf" role="button">Télécharger CV</a>
                       <ul class="list-unstyled list-inline content-follow">
                         <li class="list-inline-item"><a href="http://wa.me/+241066382343"><i class="icon ion-logo-whatsapp"></i></a></li>
                         <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-facebook"></i></a></li>
